--- a/templates/pages/personal_account_info.html
+++ b/templates/pages/personal_account_info.html
@@ -19,6 +19,10 @@
     <div class="row_info">
 
         <div class="row_info_col">
+            <div class="discount_cell--hidden">
+                <p class="main_text uppercase">персональная скидка <span class="red">5%</span></p>
+                <a href="personal_account_info_discount.html" class="small_text underline">подробнее о системе лояльности</a>
+            </div>
             <div class="info_cell">
                 <p class="addit_text_addit_dark">Фамилия</p>
                 <form method="GET" action="#" >
