--- a/templates/pages/personal_account_orders.html
+++ b/templates/pages/personal_account_orders.html
@@ -21,15 +21,19 @@
 
         <!-- Строка заказа начало -->
         <div class="orders_history__item">
-            <div class="item_number main_text uppercase">
-                заказ №35021-0003
+
+            <div class="order_group">
+                <div class="item_number main_text uppercase">
+                    заказ №35021-0003
+                </div>
+                <div class="order_create main_text_addit_dark">
+                    создан 12.06.2023 г.
+                </div>
+                <div class="order_delivery main_text_addit_dark">
+                    трек-номер: ABC123456789
+                </div>
             </div>
-            <div class="order_create main_text_addit_dark">
-                создан 12.06.2023 г.
-            </div>
-            <div class="order_delivery main_text_addit_dark">
-                трек-номер: ABC123456789
-            </div>
+
             <div class="order_value main_text">
                 31 400 р.
             </div>
@@ -43,15 +47,19 @@
 
         <!-- Строка заказа начало -->
         <div class="orders_history__item">
-            <div class="item_number main_text uppercase">
-                заказ №35021-0002
+
+            <div class="order_group">
+                <div class="item_number main_text uppercase">
+                    заказ №35021-0002
+                </div>
+                <div class="order_create main_text_addit_dark">
+                    создан 01.02.2024 г.
+                </div>
+                <div class="order_delivery main_text_addit_dark">
+                    получен 10.02.2024 г.
+                </div>
             </div>
-            <div class="order_create main_text_addit_dark">
-                создан 01.02.2024 г.
-            </div>
-            <div class="order_delivery main_text_addit_dark">
-                получен 10.02.2024 г.
-            </div>
+
             <div class="order_value main_text">
                 64 000 р.
             </div>
@@ -65,15 +73,19 @@
 
         <!-- Строка заказа начало -->
         <div class="orders_history__item">
-            <div class="item_number main_text uppercase">
-                заказ №35021-0001
+
+            <div class="order_group">
+                <div class="item_number main_text uppercase">
+                    заказ №35021-0001
+                </div>
+                <div class="order_create main_text_addit_dark">
+                    создан 12.06.2023 г.
+                </div>
+                <div class="order_delivery main_text_addit_dark">
+                    получен 20.06.2023 г.
+                </div>
             </div>
-            <div class="order_create main_text_addit_dark">
-                создан 12.06.2023 г.
-            </div>
-            <div class="order_delivery main_text_addit_dark">
-                получен 20.06.2023 г.
-            </div>
+            
             <div class="order_value main_text">
                 25 000 р.
             </div>
