--- a/css/style.css
+++ b/css/style.css
@@ -2532,12 +2532,32 @@ html {
   display: flex;
   flex-direction: column;
 }
+@media screen and (max-width: 920px) {
+  .block_tabs {
+    width: calc(100% - 20px);
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 70px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .block_tabs {
+    margin-bottom: 35px;
+    margin-top: 20px;
+  }
+}
 
 .row_info {
   padding: 55px 20px 20px 20px;
   display: flex;
   justify-content: space-between;
   column-gap: 20px;
+}
+@media screen and (max-width: 767px) {
+  .row_info {
+    flex-direction: column;
+    padding-top: 35px;
+  }
 }
 .row_info .row_info_col {
   display: flex;
@@ -2546,6 +2566,15 @@ html {
   row-gap: 20px;
   flex-grow: 1;
   max-width: calc((100% - 20px) / 2);
+}
+@media screen and (max-width: 767px) {
+  .row_info .row_info_col {
+    row-gap: 5px;
+    max-width: calc(100% - 20px);
+  }
+}
+.row_info .row_info_col .btn_main {
+  width: 100%;
 }
 
 .info_cell {
@@ -2566,6 +2595,31 @@ html {
   align-items: flex-end;
   border-bottom: 1px solid #8A8A8A;
   padding-bottom: 10px;
+}
+.discount_cell a {
+  text-align: end;
+}
+@media screen and (max-width: 767px) {
+  .discount_cell {
+    display: none;
+  }
+}
+
+.discount_cell--hidden {
+  height: 70px;
+  display: none;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-bottom: 1px solid #8A8A8A;
+  padding-bottom: 10px;
+}
+.discount_cell--hidden a {
+  text-align: end;
+}
+@media screen and (max-width: 767px) {
+  .discount_cell--hidden {
+    display: flex;
+  }
 }
 
 .adress_row {
@@ -2614,6 +2668,12 @@ html {
   height: 70px;
   max-width: 50%;
   flex-grow: 1;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .row_tabs .tab_active .main_text {
+    font-size: 12px;
+  }
 }
 .row_tabs .tab_inactive_right {
   display: flex;
@@ -2624,6 +2684,12 @@ html {
   height: 70px;
   max-width: 50%;
   flex-grow: 1;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .row_tabs .tab_inactive_right .main_text_addit_dark {
+    font-size: 12px;
+  }
 }
 .row_tabs .tab_inactive_left {
   display: flex;
@@ -2634,6 +2700,12 @@ html {
   height: 70px;
   max-width: 50%;
   flex-grow: 1;
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  .row_tabs .tab_inactive_left .main_text_addit_dark {
+    font-size: 12px;
+  }
 }
 
 .pop-up_form_794 {
@@ -2647,11 +2719,16 @@ html {
   align-items: center;
   justify-content: space-between;
 }
+@media screen and (max-width: 767px) {
+  .pop-up_form_794 {
+    width: calc(100% - 60px);
+  }
+}
 
 .pop_up_discount {
   height: 360px;
-  padding-top: 60px;
-  padding-bottom: 85px;
+  padding: 60px 20px 85px 20px;
+  text-align: center;
 }
 
 .log_in_stroke {
@@ -2665,11 +2742,21 @@ html {
   justify-content: flex-end;
   align-items: center;
 }
+@media screen and (max-width: 920px) {
+  .log_in_stroke .clear .small_text {
+    display: none;
+  }
+}
 .log_in_stroke .log_in_text {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+}
+@media screen and (max-width: 767px) {
+  .log_in_stroke .log_in_text .main_text {
+    font-size: 12px;
+  }
 }
 
 .order_list {
@@ -2684,27 +2771,43 @@ html {
   width: 100%;
   height: 85px;
   border-bottom: 1px solid #8A8A8A;
+  position: relative;
 }
 .order_list .order_list__item .order_item_foto {
-  width: 8.3333333333%;
+  width: calc(8.3333333333% + 15px);
   height: 100%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-shrink: 0;
+}
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_foto {
+    width: auto;
+    margin-right: 18px;
+  }
 }
 .order_list .order_list__item .order_item_foto .item_foto {
   width: 65px;
   height: 80px;
-  margin-right: 18px;
+  flex-shrink: 0;
 }
 .order_list .order_list__item .order_item_info {
-  width: 33.3333333333%;
+  width: calc(33.3333333333% - 15px);
   flex-grow: 1;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+}
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_info {
+    width: 25%;
+  }
+  .order_list .order_list__item .order_item_info .main_text_title {
+    font-size: 12px;
+  }
 }
 .order_list .order_list__item .order_item_price {
   width: 16.6666666667%;
@@ -2713,6 +2816,12 @@ html {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_price {
+    font-size: 12px;
+    display: none;
+  }
 }
 .order_list .order_list__item .order_item_count {
   width: 16.6666666667%;
@@ -2723,6 +2832,15 @@ html {
   align-items: center;
   column-gap: 5px;
 }
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_count {
+    width: auto;
+    justify-content: flex-start;
+  }
+  .order_list .order_list__item .order_item_count .main_text {
+    font-size: 12px;
+  }
+}
 .order_list .order_list__item .order_item_cost {
   width: 8.3333333333%;
   flex-grow: 1;
@@ -2731,21 +2849,61 @@ html {
   justify-content: flex-start;
   align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_cost {
+    width: auto;
+    font-size: 12px;
+  }
+}
 .order_list .order_list__item .order_item_favourite {
   width: 8.3333333333%;
   flex-grow: 1;
-  height: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+}
+@media screen and (max-width: 920px) {
+  .order_list .order_list__item .order_item_favourite {
+    justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_favourite {
+    width: auto;
+    max-width: 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .order_list .order_list__item .order_item_favourite {
+    position: absolute;
+    right: 0;
+    top: 15px;
+  }
 }
 .order_list .order_list__item .order_item_delete {
   width: 8.3333333333%;
   flex-grow: 1;
-  height: 100%;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+@media screen and (max-width: 920px) {
+  .order_list .order_list__item .order_item_delete .uppercase {
+    display: none;
+  }
+}
+@media screen and (max-width: 767px) {
+  .order_list .order_list__item .order_item_delete {
+    width: auto;
+    max-width: 30px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .order_list .order_list__item .order_item_delete {
+    position: absolute;
+    right: 0;
+    bottom: 15px;
+  }
 }
 
 .total_cost {
@@ -2762,12 +2920,27 @@ html {
   height: 85px;
   border-bottom: 1px solid #8A8A8A;
 }
+@media screen and (max-width: 920px) {
+  .total_cost .total_cost__item {
+    height: 55px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .total_cost .total_cost__item {
+    width: calc(100% - 83px);
+  }
+}
 .total_cost .total_cost__item .total_item_name {
   width: 40%;
   flex-grow: 1;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .total_cost .total_cost__item .total_item_name {
+    font-size: 12px;
+  }
 }
 .total_cost .total_cost__item .total_item_value {
   width: 60%;
@@ -2776,12 +2949,42 @@ html {
   justify-content: flex-start;
   align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .total_cost .total_cost__item .total_item_value {
+    font-size: 12px;
+    justify-content: flex-end;
+  }
+}
 
 .order_btn {
   margin-bottom: 85px;
 }
+@media screen and (max-width: 920px) {
+  .order_btn {
+    margin-bottom: 70px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .order_btn {
+    margin-bottom: 35px;
+    flex-direction: column;
+    row-gap: 10px;
+    align-items: flex-end;
+  }
+  .order_btn .make_order {
+    order: 1;
+  }
+  .order_btn .turn_catalog {
+    order: 2;
+  }
+}
 .order_btn .btn_main {
   width: 41.6666666667%;
+}
+@media screen and (max-width: 767px) {
+  .order_btn .btn_main {
+    width: calc(100% - 83px);
+  }
 }
 
 .orders_history {
@@ -2792,12 +2995,34 @@ html {
   padding-top: 55px;
   padding-bottom: 20px;
 }
+@media screen and (max-width: 767px) {
+  .orders_history {
+    padding-top: 35px;
+  }
+}
 .orders_history .orders_history__item {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #8A8A8A;
   width: 100%;
   min-height: 70px;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+.orders_history .orders_history__item .order_group {
+  display: flex;
+  justify-content: flex-start;
+  width: 75%;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item .order_group {
+    flex-direction: column;
+    width: 66.6666666667%;
+  }
 }
 .orders_history .orders_history__item .item_number {
   padding-left: 20px;
@@ -2806,11 +3031,24 @@ html {
   display: flex;
   justify-content: flex-start;
 }
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item .item_number {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
 .orders_history .orders_history__item .order_create {
   width: 25%;
   flex-grow: 1;
   display: flex;
   justify-content: flex-start;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item .order_create {
+    font-size: 12px;
+    width: 100%;
+    padding-left: 20px;
+  }
 }
 .orders_history .orders_history__item .order_delivery {
   width: 25%;
@@ -2818,11 +3056,23 @@ html {
   display: flex;
   justify-content: flex-start;
 }
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item .order_delivery {
+    font-size: 12px;
+    width: 100%;
+    padding-left: 20px;
+  }
+}
 .orders_history .orders_history__item .order_value {
   width: 16.6666666667%;
   flex-grow: 1;
   display: flex;
   justify-content: flex-end;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .orders_history__item .order_value {
+    width: 25%;
+  }
 }
 .orders_history .orders_history__item .open_order {
   width: 8.3333333333%;
@@ -2830,6 +3080,12 @@ html {
   display: flex;
   justify-content: flex-end;
   padding-right: 20px;
+}
+@media screen and (max-width: 500px) {
+  .orders_history .orders_history__item .open_order {
+    padding-right: 0;
+    justify-content: flex-start;
+  }
 }
 .orders_history .orders_history__item--opened {
   border-bottom: none;
@@ -2842,18 +3098,34 @@ html {
   align-items: center;
   justify-content: flex-start;
   border-bottom: 1px solid #8A8A8A;
-  width: 41.6666666667%;
+  width: 50%;
   height: 70px;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_orders_value {
+    width: 100%;
+  }
 }
 .orders_history .total_orders_value .value_text {
   width: 50%;
   display: flex;
   justify-content: flex-start;
 }
+@media screen and (max-width: 767px) {
+  .orders_history .total_orders_value .value_text {
+    width: 66.6666666667%;
+    padding-left: 20px;
+  }
+}
 .orders_history .total_orders_value .value_amount {
-  width: 30%;
+  width: 33.3333333333%;
   display: flex;
   justify-content: flex-end;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_orders_value .value_amount {
+    width: 25%;
+  }
 }
 .orders_history .order_list {
   width: 83.3333333333%;
@@ -2861,20 +3133,47 @@ html {
   margin-right: 40px;
   padding-top: 20px;
 }
+@media screen and (max-width: 920px) {
+  .orders_history .order_list {
+    width: calc(100% - 60px);
+    margin: 0 auto;
+  }
+  .orders_history .order_list .order_list__item {
+    justify-content: space-between;
+  }
+}
 .orders_history .order_list .order_item_foto {
   width: 10%;
 }
 .orders_history .order_list .order_item_info {
-  width: 40%;
+  width: 35%;
 }
 .orders_history .order_list .order_item_price {
-  width: 20%;
+  width: 25%;
 }
 .orders_history .order_list .order_item_count {
   width: 20%;
 }
+@media screen and (max-width: 767px) {
+  .orders_history .order_list .order_item_count {
+    justify-content: center;
+  }
+}
 .orders_history .order_list .order_item_cost {
   width: 10%;
+  justify-content: flex-end;
+}
+@media screen and (max-width: 920px) {
+  .orders_history .total_cost {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_cost {
+    width: calc(100% - 60px);
+    padding-left: 83px;
+  }
 }
 .orders_history .total_cost__item {
   height: 55px;
@@ -2882,14 +3181,39 @@ html {
   width: 25%;
   border-bottom: none;
 }
+@media screen and (max-width: 920px) {
+  .orders_history .total_cost__item {
+    width: calc((100% - 60px) / 10 * 3);
+    margin-right: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_cost__item {
+    width: 100%;
+    margin-right: 0;
+    justify-content: space-between;
+    height: 35px;
+  }
+}
 .orders_history .total_cost__item:nth-child(3) {
   border-bottom: 1px solid #8A8A8A;
 }
 .orders_history .total_cost__item .total_item_name {
-  width: 66.6666666667%;
+  width: 50%;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_cost__item .total_item_name {
+    width: auto;
+  }
 }
 .orders_history .total_cost__item .total_item_value {
-  width: 33.3333333333%;
+  width: 50%;
+  justify-content: flex-end;
+}
+@media screen and (max-width: 767px) {
+  .orders_history .total_cost__item .total_item_value {
+    width: auto;
+  }
 }
 
 .making_order_cols {
